# AI-image-gen-battle

./: CLAUDE.md  DEPENDENCY_SYNTHESIS_SUMMARY.md  DEPLOYMENT_METHODS.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_SETUP.md  PLATFORM_COMPATIBILITY.md  QUICK_START.md  README.md  SNAPDRAGON_EMERGENCY_TESTING.md  TODO.md  WORKSPACE_FIXES_SUMMARY.md  deploy_from_github.ps1  python-dependency-readme.md  requirements.txt  snapdragon_launch.bat
deployment/: IMPORTANT_ARCHITECTURE_NOTE.md  MISSING_MODULES_FIX.md  PYTHON_VERSION_FIX.md  README.md  README_POETRY.md  SYNTAX_FIXES_SUMMARY.md  diagnose.ps1  install_dependencies.ps1  monitor.ps1  poetry_setup.ps1  prepare_models.ps1  prepare_snapdragon.ps1  pyproject.toml  remote_deploy.py  requirements-intel.txt  requirements-snapdragon.txt  setup_windows.ps1  validate_clean_syntax.ps1  validate_syntax.ps1  verify.ps1  verify_dependencies.py
deployment/common/docs/: BATCH_DEPLOYMENT_SOLUTION.md  INTEL_VS_SNAPDRAGON_COMPARISON.md  MODEL_DIRECTORY_STRUCTURE.md  POWERSHELL_SYNTAX_FIXES.md
deployment/common/requirements/: requirements-core.txt  requirements-cpu-fallback.txt
deployment/common/scripts/: deploy_to_production.bat  deploy_to_production.ps1  fix_platform_interface.bat  fix_snapdragon_interface.bat  install_dependencies.ps1  prepare_models.ps1  quick_deploy.bat  remote_deploy.py  setup.ps1  update_latest_frontend.bat
deployment/common/validation/: test_syntax.ps1  validate_powershell_syntax.ps1
deployment/fixes/backup/: install_dependencies_backup.ps1  pyproject_updated.toml
deployment/fixes/docs/: MISSING_MODULES_FIX.md  PYTHON_VERSION_FIX.md
deployment/fixes/scripts/: fix-python-path.bat  fix_huggingface_import.ps1  fix_naming_conflicts.ps1  fix_poetry_python.ps1  fix_python_path.ps1  install-dependencies.bat
deployment/intel/docs/: DIRECTML_MAINTENANCE_MODE_ANALYSIS.md  INTEL_ARCHITECTURE_SPEC.md  INTEL_DEMO_IMPLEMENTATION_SUMMARY.md  INTEL_FIX_SUMMARY.md  INTEL_OPTIMIZATION_GUIDE.md  INTEL_QUICKSTART.md  INTEL_REMOTEEXCEPTION_FIX.md  README_INTEL.md
deployment/intel/reports/: INTEL_TESTING_REPORT.md  INTEL_TESTING_REPORT_20250814_111344.md  INTEL_TESTING_REPORT_20250814_111629.md  INTEL_TESTING_REPORT_20250814_111830.md
deployment/intel/requirements/: requirements-intel.txt
deployment/intel/scripts/: create_intel_launchers.ps1  fix_intel_deployment.ps1  prepare_intel.ps1  prepare_intel_fixed.ps1  test_intel_deployment.ps1
deployment/intel/tests/: test_intel_comprehensive.py  validate_directml_installation.ps1  validate_intel_syntax.py
deployment/snapdragon/docs/: DEPENDENCY_FIX_GUIDE.md  ERROR_RECOVERY_ARCHITECTURE.md  RECOVERY_STRATEGIES_GUIDE.md  SNAPDRAGON_DEPLOYMENT_SUMMARY.md
deployment/snapdragon/requirements/: requirements-snapdragon.txt
deployment/snapdragon/scripts/: SNAPDRAGON_FIXES_SUMMARY.md  alternative_cors_fix.bat  deploy_to_production.ps1  error_recovery_helpers.ps1  error_recovery_helpers_fixed.ps1  fix_missing_dependencies.bat  fix_snapdragon_deployment.ps1  prepare_snapdragon.ps1  prepare_snapdragon_comprehensive.ps1  (+2 more)
(+77 files in other folders)
